--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "module2"]
 	path = module2
 	url = https://github.com/Pradeep-Lakkampally/multi-repo.git
+[submodule "module3"]
+	path = module3
+	url = https://github.com/Pradeep-Lakkampally/multi-repo.git
